--- a/index.html
+++ b/index.html
@@ -237,7 +237,10 @@
                   </div>
                   <div class="voom-item item2">
                     <img src="./img/voom2.jpg" alt="" />
-                    <p class="is-red">#美術館巡り</p>
+                    <div class="voom-item-texts">
+                      <p class="is-red">#美術館巡り</p>
+                      <p class="is-red">#隣は奥さん</p>
+                    </div>
                   </div>
                   <div class="voom-item item3">
                     <img src="./img/voom3.jpg" alt="" />
@@ -261,7 +264,10 @@
                   </div>
                   <div class="voom-item item8">
                     <img src="./img/voom8.jpg" alt="" />
-                    <p class="is-red">#推し活</p>
+                    <div class="voom-item-texts">
+                      <p class="is-red">#推し活</p>
+                      <p class="is-red">#あんスタ</p>
+                    </div>
                   </div>
                 </div>
                 <div class="voom-decoration">
